--- a/index.html
+++ b/index.html
@@ -3,102 +3,116 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
 <script>
-navigator.geolocation.getCurrentPosition(onSuccess, onError);
-var onSuccess = function(position) {
-    alert('Latitude: '          + position.coords.latitude          + '\n' +
-          'Longitude: '         + position.coords.longitude         + '\n' +
-          'Altitude: '          + position.coords.altitude          + '\n' +
-          'Accuracy: '          + position.coords.accuracy          + '\n' +
-          'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
-          'Heading: '           + position.coords.heading           + '\n' +
-          'Speed: '             + position.coords.speed             + '\n' +
-          'Timestamp: '         + position.timestamp                + '\n');
-};
-function onError(error) {
-    alert('code: '    + error.code    + '\n' +
-          'message: ' + error.message + '\n');
-}
+//watchID = 
+//navigator.geolocation.getCurrentPosition(onSuccess, onError, {timeout: 10000, enableHighAccuracy: true});
+
 </script>
 <meta charset="UTF-8">
 <title>GET TO EROAD</title>
 <style type="text/css">
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
-#geolocation { height: 10%; }
-#map-canvas { height: 90%; }
+
+html{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+body{margin:0; height: 100%;}
+
+#geolocation { width: 100%; z-index: 1; background: #333; color: #FFF; position: absolute;}
+#map-canvas { height: 100%; }
+.eroad{position: absolute; top:0; right: 0; z-index: 1; color:#FFF;	}
+#geolocation2{z-index: 1; background: #333; color: #FFF; position: absolute; bottom: 0;}
 </style>
-<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="../../cordova.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false" type="text/javascript"></script>
 <script type="text/javascript">
+
 function onSuccess(position) {
 var element = document.getElementById("geolocation");
 element.innerHTML = "Latitude: " + position.coords.latitude + "<br />" +
-"Longitude: " + position.coords.longitude + "<br />";
+"Longitude: " + position.coords.longitude + "<br>&nbsp;";
+
 var lat=position.coords.latitude;
 var lon=position.coords.longitude;
 var myLatlng = new google.maps.LatLng(lat,lon);
 
-
 var directionsService = new google.maps.DirectionsService;
 var directionsDisplay = new google.maps.DirectionsRenderer;
 var map = new google.maps.Map(document.getElementById('map-canvas'), {
-	zoom: 4,
-	center: {lat: lat, lng: lon}
-});
-
-var marker = new google.maps.Marker({position: myLatlng,map: map});
-
-directionsDisplay.setMap(map);
-
+    zoom: 4,
+    center: {lat: lat, lng: lon}
+  });
+  var marker = new google.maps.Marker({position: myLatlng,map: map});
+  directionsDisplay.setMap(map);
+//calculateAndDisplayRoute(directionsService, directionsDisplay);
 document.getElementById('goEROAD').addEventListener('click', function() {
     calculateAndDisplayRoute(directionsService, directionsDisplay, myLatlng);
+	computeTotalDistance(directionsDisplay.directions);
   });
-
 }
 
 function onError(error) {
 	alert("code: " + error.code + "\n" + "message: " + error.message + "\n");
 }
 
-var watchID = navigator.geolocation.watchPosition(onSuccess, onError, { timeout: 3000 });
-google.maps.event.addDomListener(window, 'load', onSuccess);
+//var watchID = navigator.geolocation.watchPosition(onSuccess, onError, { timeout: 3000 });
+//google.maps.event.addDomListener(window, 'load', onSuccess);
+navigator.geolocation.getCurrentPosition(onSuccess, onError, {timeout: 10000, enableHighAccuracy: true});
 
 function calculateAndDisplayRoute(directionsService, directionsDisplay, myLatlng) {
-	var tMode = document.getElementById('travelMode').value;
+	var tMode = document.getElementById("mode").value;
   directionsService.route({
     origin: "Auckland",//myLatlng,
     destination: "-36.7272458,174.7051661",
-    travelMode: google.maps.TravelMode[tMode]
+    travelMode: google.maps.TravelMode[tMode],
+	provideRouteAlternatives:true
   }, function(response, status) {
-    if (status === google.maps.DirectionsStatus.OK) {
+    if (status === google.maps.DirectionsStatus.OK){
       directionsDisplay.setDirections(response);
-	}
-	else{
+    } else {
       window.alert('Directions request failed due to ' + status);
     }
   });
 }
 
+function computeTotalDistance(result) {
+  var total = 0;
+  var time= 0;
+  var from=0;
+  var to=0;
+  var myroute = result.routes[0];
+  for (var i = 0; i < myroute.legs.length; i++) {
+    total += myroute.legs[i].distance.value;
+    time +=myroute.legs[i].duration.text;
+    from =myroute.legs[i].start_address;
+    to =myroute.legs[i].end_address;
+  }
+  
+  time = time.replace('hours','H');
+  time = time.replace('mins','M');
+  total = total / 1000.
+  //var element = document.getElementById('geolocation').innerHTML;
+  document.getElementById('geolocation2').innerHTML =  "Local Time: " + new Date() + "<br>" + "UTC Time: " + new Date().toUTCString() + "<br>From: " + from + "To: " + to + "<br>Time to Reach: " + time + " to travel: " + Math.round( total) + "KM";
+}
 </script>
 
 </head>
 <body>
 <div id="geolocation"></div>
 <div id="map-canvas"></div>
-<div id="travelmode" style="position: absolute; background-color: #999; right: 0; top: 0; z-index: 100; float: right;">
-<table align="center">
-<tr><td>
-<select id="travelMode">
-	<option value="DRIVING">Travel Mode:</option> 
-	<option value="DRIVING">Driving</option>
+<div class="eroad">
+<b>Travel Mode</b>
+<select id="mode">
+    <option value="DRIVING">Driving</option>
     <option value="WALKING">Walking</option>
     <option value="BICYCLING">Bicycling</option>
-	<option value="TRANSIT">Transit</option>
+    <option value="TRANSIT">Transit</option>
 </select>
-</td></tr>
-<tr><td><input type="submit" id="goEROAD" value="Let's go to eRoad"></td></tr></table>
+<br>
+<input type="submit" id="goEROAD" value="Let's go to EROAD!">
 </div>
-
+<div id="geolocation2">
+</div>
 </body>
 
 <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=onSuccess" async defer></script>
